# implicit

./: README.md  pyproject.toml
implicit/: __init__.py  exceptions.py
tests/: test_implicit.py
